# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: pyci.yml
hexlet-code/hexletcode/: asgi.py  wsgi.py
hexletcode/: urls.py
labels/: forms.py  models.py  tests.py  urls.py  views.py
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: asgi.py  forms.py  mixins.py  models.py  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: label.json
task_manager/migrations/: 0001_initial.py  0002_task.py  0003_label_remove_task_assigned_to_task_executor_and_more.py  0004_status_created_at_alter_status_name.py  0005_alter_task_status.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html  index.html  login.html  register.html
task_manager/tests/: test_filter.py  test_labels.py  test_status.py  test_tasks.py
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager_/: models.py  urls.py
task_manager_/tests/: test_filter.py  test_labels.py  test_status.py  test_tasks.py
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
users/: forms.py  views.py
(+40 files in other folders)
