[project]
name = "python-project-52"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.2.1",
    "gunicorn>=23.0.0",
    "make>=0.1.6.post2",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.11",
]
